--- a/Labs/LaTeX/Script/how_to_latex.tex
+++ b/Labs/LaTeX/Script/how_to_latex.tex
@@ -663,7 +663,7 @@ In LaTeX, everything can be labeled, and after that it can be referenced. Consid
 In every scientific article it is important to clearly state your sources. You need to cite within your article and list all used sources at the end within your bibliography. 
 Basically, there are two options to use references in \LaTeX. One is including references in the \LaTeX\ file directly, the other one is maintaining an external file in BibTex format. For most cases, the latter will be preferred. There are few reasons to keep references directly in the \LaTeX\ file. One could be that a journal requires the submission in one \LaTeX\ file only (but in most cases you are allowed to include a .bbl file, which is created by bibTex). In the following, we focus on the link to the BibTex format. 
 
-An excellent program to built your BibTex database is Jabref. An open source literature manager, which uses the BibTex file format. As it was written in java and distributed as a jar file, you can use it on any operating system with a java virtual machine installed. It is first choice for everyone who works with latex, but it may also be linked to Microsoft Word\marginnote{Comprehensive information on how to link you Jabref database with Microsoft Word can be found at: \href{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}}. 
+An excellent program to built your BibTex database is Jabref, a free, open-source literature manager, which uses the BibTex file format. As it was written in java and distributed as a jar file, you can use it on any operating system with a java virtual machine installed. It is first choice for everyone who works with latex, but it may also be linked to Microsoft Word\marginnote{Comprehensive information on how to link you Jabref database with Microsoft Word can be found at: \href{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}{http://www.medicalnerds.com/how-to-use-jabrefbibtex-with-microsoft-word-2003/}}. 
 
 This is an example of how an entry your BibTex database could look like:
 \begin{lstlisting}[language=BibTeX]
